UI tweaks, step counter tweak, settings tweaks

--- a/Glance/resources/styles.css
+++ b/Glance/resources/styles.css
@@ -9,6 +9,12 @@
   font-size:140;
 }
 
+#seconds {
+  font-family: Tungsten-Medium;
+  fill: white;
+  font-size:45;
+}
+
 #battery {
   width:50;
   height:17;
