--- a/Glance/resources/styles.css
+++ b/Glance/resources/styles.css
@@ -4,25 +4,25 @@
 }
 #time {
   font-family: Tungsten-Medium;
-  fill: white;
+  fill: #b3b3b3;
   text-length: 65;
   font-size:140;
 }
 
 #seconds {
   font-family: Tungsten-Medium;
-  fill: white;
+  fill: #b3b3b3;
   font-size:90;
 }
 
 #secscolon {
   font-family: Tungsten-Medium;
-  fill: white;
+  fill: #b3b3b3;
   font-size:90;
 }
 
 #battery {
-  width:50;
+  width:65;
   height:17;
 }
 #battery-level {
@@ -31,45 +31,45 @@
  fill:white;
 }
 #date {
-  fill: white;
+  fill: #b3b3b3;
   text-length: 65;
   font-family: SevilleSharp;
   font-size:35;
 }
 
 #day {
-  fill: white;
+  fill: #b3b3b3;
   text-length: 65;
   font-family: SevilleSharp;
   font-size:35;
 }
 
 .weather-text {
-  fill: #33ffbb;
+  fill: #66d9ff;
   text-length: 100;
   font-family: SevilleSharp-Bold;
   font-size:25;
 }
 
 .status-text {
-  fill: white;
+  fill: #b3b3b3;
   text-length: 65;
   font-size:20;
 }
 
 .h1 {
-  fill: white;
+  fill: #b3b3b3;
   font-family: SevilleSharp-Bold;
   font-size:45;
 }
 
 .h2 {
-  fill: white;
+  fill: #b3b3b3;
   font-family: SevilleSharp-Bold;
   font-size:25;
 }
 .h3 {
-  fill: white;  
+  fill: #b3b3b3;  
   font-family: "System-Light";
   font-size:22;
 }
@@ -84,5 +84,5 @@
 }
 
 .gval {
-  fill:#b0b1b2;
+  fill:#4d94ff;
 }
