--- a/Glance/resources/styles.css
+++ b/Glance/resources/styles.css
@@ -2,23 +2,39 @@
   width:100%;
   height:100%;
 }
-#time {
-  font-family: Tungsten-Medium;
-  fill: #b3b3b3;
+#hours {
+  font-family: SevilleSharp-Regular;
   text-length: 65;
-  font-size:140;
+  fill: #b3b3b3;
+  font-size:90;
+}
+
+#minutes{
+  font-family: SevilleSharp-Regular;
+  text-length: 65;
+  fill: #b3b3b3;
+  font-size:80;
+}
+
+#colon1{
+  font-family: SevilleSharp-Regular;
+  text-length:20;
+  fill: #808080;
+  font-size:70;
+}
+
+#colon2{
+  font-family: SevilleSharp-Regular;
+  text-length:20;
+  fill: #808080;
+  font-size:70;
 }
 
 #seconds {
-  font-family: Tungsten-Medium;
+  font-family: SevilleSharp-Regular;
+  text-length: 65;
   fill: #b3b3b3;
-  font-size:90;
-}
-
-#secscolon {
-  font-family: Tungsten-Medium;
-  fill: #b3b3b3;
-  font-size:90;
+  font-size:55;
 }
 
 #battery {
@@ -41,7 +57,7 @@
   fill: #b3b3b3;
   text-length: 65;
   font-family: SevilleSharp;
-  font-size:35;
+  font-size:45;
 }
 
 .weather-text {
