more weather UI element tweaks.  bold various weather data when certain conditions arise, such as low humidity, high winds, etc...

--- a/Glance/resources/styles.css
+++ b/Glance/resources/styles.css
@@ -62,8 +62,8 @@
 
 .weather-text {
   text-length: 100;
-  font-family: SevilleSharp-Bold;
-  font-size:25;
+  font-family: SevilleSharp;
+  font-size:27;
 }
 .windDir-text {
   font-size:28;
