Changed openweathermap endpoint to wunderground. Lots more weather datapoints, more frequent station polling.
Removed the "degree" image and using native character "°"
added weather datapoints for UV, windgust
changed settings to reflect wunderground api key and station ID as inputs

--- a/Glance/resources/styles.css
+++ b/Glance/resources/styles.css
@@ -66,12 +66,13 @@
   font-family: SevilleSharp;
   font-size:27;
 }
-.windDir-text {
-  font-size:28;
-}
 
 .weather-color {
   fill: #b3ffb3;
+}
+
+.wxtime-text {
+   font-size:25;
 }
 
 .battery-text {
