Added prelim weather trend indicators.

--- a/Glance/resources/styles.css
+++ b/Glance/resources/styles.css
@@ -67,6 +67,12 @@
   font-size:27;
 }
 
+.weatherTrend-text {
+  text-length: 1;
+  font-family: SevilleSharp;
+  font-size:22;
+}
+
 .weather-color {
   fill: #b3ffb3;
 }
