Fixed issue where new sensors don't send bg data for 2 hours... I set those values to "-1"
Fixed issue where wunderground rain-today data sometimes comes back as -9999. I set those to "--"
Added new data feed to the local xdrip url for pebbles to get IOB.  The local xdrip web service "sgv.json" doesn't contain iob data, so I'm using the pebble interface:  http://127.0.0.1:17580/pebble

--- a/Glance/resources/styles.css
+++ b/Glance/resources/styles.css
@@ -143,3 +143,10 @@
   font-size:24;
   fill: #8080ff;
 }
+
+.iob-text {
+  text-length: 6;
+  font-family: SevilleSharp-Bold;
+  font-size:24;
+  fill: #ff751a;
+}
