Added heart rate and steps to message back to phone for xdrip to display
added another color category for > 100 deg for weather data color
added some logic to handle air quality json irregularities

--- a/Glance/resources/styles.css
+++ b/Glance/resources/styles.css
@@ -112,15 +112,15 @@
 }
 
 .companionStatus {
-  fill:#ff3333;
+  fill:#595959;
 }
 
 .o3 {
-  fill:#ff3333;
+  fill:#595959;
 }
 
 .pm25 {
-  fill:#ff3333;
+  fill:#595959;
 }
 
 .heart-color {
@@ -139,14 +139,14 @@
 
 .river-text {
   text-length: 6;
-  font-family: SevilleSharp-Bold;
-  font-size:24;
+  font-family: SevilleSharp;
+  font-size:25;
   fill: #8080ff;
 }
 
 .iob-text {
-  text-length: 6;
-  font-family: SevilleSharp-Bold;
-  font-size:24;
-  fill: #ff751a;
+  text-length: 10;
+  font-family: SevilleSharp;
+  font-size:25;
+  fill: #ccccff;
 }
